# email_newsletter

./: Cargo.toml  Dockerfile  run.sh
.cargo/: config.toml
scripts/: init-db.sh  migrate.sh  runw.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscribe.rs
src/utils/: mod.rs  spawn_sut.rs
tests/: health_check.rs  subscription.rs
tmp/logs/: log_file.txt
